# serializer version: 1
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x10WKAGg4ssBHslGcaQ7r7u5GF4Se6jGNBrTIm0sRwCYk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x17DstmwfC7OiOFTVvXrstvKyvO7lYjJREllGiZYxIRDc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x19pU8BjW-z2EcDY0HlWMK0NVvr83X9I7hIUrqaOo8GKY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1H6ChJ6qR3ERVx8jesYSONiC40TMo6IQUJlOSRvdnRj4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1TZrFMkhH4m-YBBxQpcsTxUC8nqtKzZFesUmZWAmN7EM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1V4nvi2-ga6tO0LPcCnO9p1BHYlf_ZDqutlPPYqXFTtI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1aTC_uwP_lTUL5eFyO2XwJ8PSWxh8H8G3EaiXKhYVzU4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT16x16x32_MI16x1yd1GZYL-N0QySg4mTyW3bDnctCxhKOmHLRkZVLPrj_I=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[agntab_coverage_gfx950]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI322IM9ysG-9c0ZsEAuVFw2thY2mgCoio-dg67Zo2CPqCc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32NYQnOMKhnyiubBVfv5l6lwTYMiP-SvHpwaqMjOR5ZTI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32iW5fvq1j-kQINxVr7SmF3DUwteBa2EmTo3DWdxat3pU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT128x160x64_MI32wMpTe7GFW1ZKjkYtg6aIYiMXhS8tLN9zuMb3rIkCk_Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16HHxI9KMid6zW10kBu_0uVKY2SNPq-22bSRuGfz57mqc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16NBHw2nw5QD4lXJpcS2MfHF2gdImW5yc2z5cOe1ZGBKY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16W_7yr9e4mZTXhGgFqFx62q8ocgOizp1CZ-oOVvLQFyE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_UserArgs_MT192x128x64_MI16s-jNTebGK6350qxAGaVQnzSoqynxe48Kyfbp9ghGmlg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b6f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MI4tGdl3ppKDkY20MB2W1JQiofJg12Yc_FBl23Rj09MjQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x128_MIRCDxF1FhQGT4lwWEERskltTPIuzD2TyCZrqjbzOD7UQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MILyQsjlSFyCJbj7AOXLJeN2OOVif-FDDWBxcn3zvOU9s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT16x16x256_MIngG1ec8opO3D6pGMR7c7SM_15HAtbOcyJhAvyRJBrZU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MI7J6w0KSJdEyiTlGsk7SwzwDcpG-ILrSkN-ibZ-afR6g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x128_MIuyFCvFitKzAn1xgu0xCGyDB_E3bOBg3vJThZQR68Ai0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MIIVQYsFXZt7Lda8_AdgjRIs1UEpTJUE4F_F_QEVC9sDc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6F4SS_BH_UserArgs_MT64x64x256_MI_snu3wJq4IZegC8Zve90wPBTVx2lJTo1tgyTF4OxOkw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[b8b8s_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_B8B8S_BH_UserArgs_MT256x32x64_MI1cJtvTUWrSZaWNQuceXKn6MO5ko164sG7SICxvzV-rbA=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bbs_bgradd_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgsLJMxL91CPn2wmQqDeb5RHPVITDS2ONjxGn9Q2gpNLVU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_D_GradB_HA_S_UserArgsWng6cm2PZyl0-PJlGW5_C5e_F6x6ZO4WiVPHBkpWIUg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf16_CLS_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT160cu_JjFglu2Hi7-IeoNc19nks4H9s-V7HlNDLaRr60=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1zE7AcHhXt7sZGIQv9MnZu9HtjH4QeCjqksBuDDAQs8k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2eoRNXytBb3YRPiThn5RxTvuPcswYQ67W8HQ-3wfscVI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT32pRyR6C2iYMKPc0fsVdK84WkA5pf26FrJq4cfAPT10Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3Y7acKvVqOcznDhlrGDnC3mW35QU9zoOjOF_1pfr2XuI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3dg5IoWZBc1JiXIgoryE6JxVVmyIf7oa7x0w8_jUXdGs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT3z7c7r-a3SyT_6u29unZ90LenUyJZ_ls9o2bt0S8FM44=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT4sjKRYxInWrCBRok0qhZ-7TXbhK2bg5KlhfZKKfZwDEM=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[bf6_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16UJlnXc7cY08erAfk2WODmjyCBUSEtUdTi2GsToaROwo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_B6SS_BH_UserArgs_MT16x16x128_MI16VVxISkkXdUD7l7P8VQfkxricza8wrBGQiX5UhKOzjxk=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[cgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1TPIvi-0xPAFRy9KNiGrDGcAGQL9lt-fHbmtVVL1QdLM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x16_MI16x16x1x-CRM9QlVBd3lT3wsz0w1ytVkGEx9pMtmn4HeHMHdso=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_dusJDyo4zhUhK76xHswrfeNCM93Z1NWVTikaa4PGiGI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT16x16x8_MI16x16x1_i5_KyrfuMKsu2RV34MEMWbZGf2ysTR3n6ORVedo_EaE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_TUgOTKvdG2ofFXmp7ysFLh-5ArqOIZHeJWCbiugyWNM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT32x32x8_MI16x16x1_i5IkEAJpB-Q7zHgvO5iNFjhvg8dPJdAv1ckDR4u1S24=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1_TsHcJZB-x0svUk4-_j0hCEc8j-wdW8VdjV22sKoQ61w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_C_B_UserArgs_MT64x64x8_MI16x16x1__JTbEVWnvNlkueQoS_1jvdEWGD3p3C48s3L1bqRR0Bg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT247npc-umIcHgYRN8UOkVhrRxniaBwzx5jMwm5_vjh5U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT2z4ePzXzqG74afDkGy6lk1VRcPL9m9RomhEOnWwmRhlE=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[custom_mainloop_scheduling_tf32]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_S_MX_B_UserArgs_MT192x256x32_MI16_Bh74qb4J0MG12Px-sBuVetRh_AtxqeUUlYMa7W3R7I=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[dot2_gfx942]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6p485rTlU_WXDdsi53yvRP2p5yoRf2NTIJ7hBTwxsTRE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6uycHHx_O7za_WSWvU5bb6XMmmoEGWJ62HYATapep8ZI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HHS_BH_Bias_SAV_UserArgs_MT64x1x6xRcUCO_XI_9KklbuHFmObQds-3eFVW2lPXRvpAZrlvo=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f16f8mix_ss_stoch]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6qdj583-BLdYczSP634sQDJ478JIrpisnEKCtXmGIEHk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6qvmy_M9l7AnsSXNOnKkySh_XussWgs_yfPGpjWiZ4uM=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6t1JS17Fq6JsCCw7HH_ceIgHrRgxuUoHeL8V0BKjv3P4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8_F8SS_BH_HA_S_SAB_UserArgs_MT6yEBLO1PJX-U8o7h7HK5BmAieseICNwDlV2Xbu7mdvHQ=',
      'err': -2,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16EAvdAWjcqZTBVZDgJgq0USWmYzqGn0z14u1raTFqlck=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x128_MI16rJ12Szg7MvVgoM7WzzMaNQnpv9ZTVWGcYWqyljOOaPM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI16bfGuMfCK-UMTRuo3zPRucj7KWnKpnn8TsQvjESETZgg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT16x16x256_MI16fesbnmM4B6Uf1-HzjwmUpYgYzVJhZLoEMJFRWBOEQ0Y=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI16MRtfj2cB5yGygqkPzTMR3cl93UT2EsTemZcq008JLOo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x128_MI16UVz4N9zrUn2dGoqNmLuRIMKxjNKRS1Dw6sz4SFDiifE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI16NfbKO4SxB2O6lT7jPNpYp2HeEW6psoq9Ky1iDnblaMI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4B8_BH_UserArgs_MT64x64x256_MI16f4nt_CMIIYbtovDaMrQwP8upRXdtGcWYvss7cpVoNP0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f4f6ss_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x128_MIVGiokZKAed9sYRJnkdb4i2dlZilsvr-N13nzVEI4v4g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT16x16x256_MIeaT7lg7DMWqUqi25UVr9Xw_G00zGnoUTyCQGYruq6Rk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x128_MIpNVM4ag5e2rWpYzp_0mxzjHSPyXzEIlT5IH8cAvi_KI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4F6BS_BH_UserArgs_MT32x32x256_MIM57N_mcM594WN-PcnRoaIU5STWuXhUY34HJAmSRHS4Q=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MIMoZdMCoKDirKyBYuTN2gMyoYZiv6s_6Pj9BhY8-m6U8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B6SS_BH_UserArgs_MT16x16x128_MIh0PNyQ5GM4_r9zGUWj9xCeocZTFbr3jb0VQrfLQ9zYU=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f6b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI166XroBDv2QprQTHwXLStDBlumfdAtPg8zH9Zw_1JuaEM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x128_MI16x3niGSkVeM5Gkt5VXwoHPApL2PpI8HAM0ZRKwrjqOz0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI163p17JwRp5Cjk1xOIXclrhYXy43dmle5iSyEIibCtVjU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT16x16x256_MI16kAw9wvPrFmPnlzw2iCHj1N0jilb_0lOPWPsRG1JawCU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16NgAkNZSXeTixZig3Mi1XsLOf_ij-WCWfH4G-4xBpavk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x128_MI16wIpNRdddlHlw4HXC6V3U-CYmEGCGX5UA8fs9pgb6G4c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI16EvYwtoJIid6R953JTTfz9wmQ32nJ12fSkecJ_Ybtd-4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6B8_BH_UserArgs_MT64x64x256_MI16MO9OXBaErlSM-IATmJl_HopDi1_eydy5ENoK6uVCivU=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b6ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI16UvW1dHms_xTkyDyWbDgag3CX_7sO2UZ6_x-2gv_Qcxs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x128_MI16ZP21LojjZmO2xdvAI-hHtgnZCP5jnf2zGVlcgGZVgzI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI164_78ULe_0IPj3N0zoy60QIUrM1hJplQph6LieBN6eLE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT16x16x256_MI168OxeE7o7FM4-vWCV3Ca-X6pGpu8hIAFlAdKdI4OVQ5U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI16Q_V_me2vuc-iu4JcOtA77_E8zjbHbb2orEXg_48_U54=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x128_MI16iDpvbmJH4k_uxIVvZ7sT1Wvy_TKPwAGxQBoYcTHyOY0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16CcSPjgtB2PbI45ZKXTjaj2Y9Aci4ri7R32gDF5L1a-U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8B6_BH_UserArgs_MT64x64x256_MI16sOHMsyDgh7RZJAXS8Q4bKWKz2VH5YTZZtpaRYZ846Pw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8hs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI-A6YlfN4IP8GtZM-dKRQa9dBMXGtySC0YZzBs31f3HU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI0LOVqTGZrJJzNIUFB6xSrmW3OtHUOpQRYMpyZVj2cR4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI3aAlzVXMDcUESkQXAs0J-p9c6UkIgkJkkIfct_xS9PM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MI8JXBpHTCUtBYXfug6CGH32D6pciGGj-A6MB-zaokqS8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MISkj7dv3_9UFMeuEGiEbYUS18kYQm_c8qdWtqnqHbfCw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIX0SJh-7rTgcNqRJPOvBQFs9g8wI6AfIO5Og4jYwK5qA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIdzy2MzXzFiPhV9IcxZLhj69sO9pjsAULb-Ko2CXlVj0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_F8B8HS_BH_UserArgs_MT16x16x128_MIwhbjDa7WIWYROZBxPAQ-9621scgIKEYWgkwp_62wmA0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8b8ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MI1umOgB-36Ad60QuHc9w1ejGkA2PGFxFEwhWftw8TKwU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MI9J4nhWniM3C6UyFB3Ro_EyGgbxPhvAxkKIEqT2Xz2lg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIH0bWi1VS4kkd5AKvUsr4vtIfmLNtVgogu6e4-d_8KCw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIJK_CNyK8HS-AGRkixqwtYbdfrkW-reXrVzkM9dQnBYs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIKTMKgJj4kb4rxXymoRSEzjcFkmYGjBgaOzUeG0KzQZY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIc-ha4-lBcOTD_8pa51ZVa09OyP4RLwAXBQOsmdWBm2w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIualLrPXUlttY_2j1JyUOFoLsIazmzEVcP5SfQzuvYMs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8B8SS_BH_UserArgs_MT64x64x128_MIwkuu6arj51tmvDqFR55RW2RiWRmRxzJDSt4gxcspjLk=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f16mix_f8s]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UIru5QoUefU2sahRszZ4b4UVMLevXFLyw5ccrkP79oRs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UjqICf2Muwx2YULiGMoXoWBcM1S5868HAb8rkCfdItd0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_UnQQkzdYoQdHExLQGX4KCIadVccjwjdX5_10ecduS2-s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_F8H_HF8S_BH_Bias_SB_SAB_SCD_SAV_Unl54kXZuOO506WIMfMqQKBtOC_nH4so5SdS8IdFsHiA=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f4ss_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MIgsRUsokLO8_7W8b-8AXirWcOxoXKWqbBIVoRnZqdICI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x128_MIkuSO-brWI-XNhNzyVeGxmkak3go3m60-S0QGXFxIsEY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MI8OjgvW_Clpq9R3FlOnQSolpepPImnotVBO4dDtf8T80=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT16x16x256_MIoAFce_0B5Nzcz9Jp8EkCX-8b6w8vpL1XWObXJUywheQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MILyodM6mDz3vqCVwJCVXkjCsQMSzi5h8f_DQnVqvz6O8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x128_MIq7xBjYmn4dMrODv6BSrNQGA7m4RlsorGoMt6b-R1qzY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MIK7uyufxsYpesSpv0qC-DE2WAQbtwjXn8iWWzAFhwi9g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4SS_BH_UserArgs_MT64x64x256_MITZ73Xd_daYdp9xFFNRpeE-0yNvfagE2BJE9ifEA9zqg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_cls_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MGo_SwPAZuXk5E6gEKC1iBqrTSmL7ld7KqE2yoCcn-vQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MNRyK0Ts7aRn1AsFd-YbtlZ0s_iy_sZxi3Pb6ec6Zcbk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F8S_BH_UserArgs_MT256x256x256_MyYiZXviZASLCh0AIo1U7GxVGdmkM25NBrz5w4S6kjwc=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[f8f8s_pk8_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8F8S_BH_UserArgs_MT256x64x64_MI1-dlMRbB6R4xX61teW4eb6sfANFNjyLCxbcPlmFLT-RM=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp16_HH_BHS_bf16mfma_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128LSDWZ5vgDr2rjko_wNkHFPoovR6VjWA515H6g6oN334=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT128Y9h_mm2ITwIngjFELayFeTcvklN8cFvWI3fFeS2i5EQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT192RuiLfMzFovbBxvoq-kk6-wV0DA0Zpzjw5KqDQbzG9nU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT192bIkE2_o2h8iLS1mR6XC8yQVRNVayPXO-QBrkFouR7Jg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256LCc5Yo3lAiQxqHoG_E1UitniSaLzaqmNeseORJO0ECw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT256f6LTiSspdhQ_ymDUZ7YquY-Eq7G5Hby6jxQiV1CENck=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64x6WamcbFanK73Yo5LRa48sNcd66xmIrzfEq2qeMM1Auw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_BHS_BH_Bias_A_S_UserArgs_MT64xYxPQ3HxbE72a9SsobzlTSs0T-CUTUpr_ywiXksWL42g=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp32_nt]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_Bias_SAV_UserArgs_MT64x96x32_u-1YCm4eHvC9l8XsVKpRCzQJropXcuOiOeWGtf43Rvg=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8_mxfp4_bf16_tn_act]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiSCQMlliX2A7gIJBlnovGSbqQBPtM6XqB5UT-43O9CdY=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BiXbO2E7MbpoVwBXYdEXcNeGz2X99sKYmtzQSkzOUGYo0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BidTWrPr_uOEYgpDerJZgcueww57Nd7uB4kz5n1POG2cs=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8F4_F4BS_MXAE8B32_MXBE8B32_BH_BifOAfkpfW5ov34zSNd0eXi_m-d_oM2NYZdMMsi17iwuw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8bf8nss_gradient_bias_b]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgQpvvlJL7Q3VcxD0f9i5JrQ16hXYccfycLeKyejHhvgA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NB8NSS_BH_Bias_SB_B_SAB_UserArgxsiW3rXNcGBJAyhDcybaVIt5nlgFD_Z9QOaVYSFcgQo=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8n_use_e]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABABcm2RumuVQSEgXxQ2jXIK0JkAUZrHRxpKVzbrzEp74=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABe3kHRL3I9PL6v16BlEUe_1tBeriTZJQ7G64xLtUhkb8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABhKBkRGtqiApBnK6OT1D2cTk1Tal1CECNDZIehWrN-AM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABhew9myg5c6EwuhXYKrtygmdtABp4uu3BE7qLHyf-PzY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NF8NS_BH_Bias_H_AuxF8N_HA_S_SABslrMJFFLiMrFzH7tsS4etQogDXIctxY8y62q5ZBY708=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[fp8nfp16mix_hhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_M8z7Xb2br0UezJrCXKUeHtbxh3ksM1vXIBZRbt9fLZSc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MIWjtX1NTeWFA4vbgvurZepAzUoRYtWhhXZ-7aRtmTT4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MMxETiFwHkbnP1AD0oasH9Hm9lZRHvRIVcLhA9RWZV1c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_MTxiIKPg9U1yeXy8umZJ5YNLI2kwFcs2IstKoa_fiREk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8NH_HHS_BH_UserArgs_MT16x16x64_M_UYTe9rF8RxyOwQn48HTY-HTu_DyHxUycOIzD3zrweY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[general_wgm]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT19ufKESjCnhjWNMptS4wBXm-cSB7ghylrXioKXhfU2_8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1G31oJPlWeSU3Jkr1Mi7FzmHv31ppgdNLoCPRPpYcvBg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1KSj7qSbo08TzWefaFfgEq1-4I1uRSF5nwZOJVBGV9_I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1LqJh1kVE0ykhJZgaJCF9h9syoaiVgXvHY-2LyxA2MD4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1cyXoeA-Gu0kn6ALHfNyW-BfUugTEWjSM0pxBCrLjbY8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_HA_S_SAV_UserArgs_MT1lAbWlw_q1DKfgR8FFs-dh2DLhBFa8YRGYkaaOstvVF4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[hh_f8nhs]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_17oVtYDMCo3XQwNHcEO27av89V14IjUPVCt6Tez_Bnw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_XFmq5XPXP9gdEv49a-xUouM4g9aEapHJzY1QMJcVLtI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_aXCpnmX_Oki9fiJw129W4cAoIvzTEiqvdlT-bmL1xU0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HH_F8NB8NHS_BH_Bias_SAV_UserArgs_p6WnT3Mg8AJkr6j8WCcHiW_KWf4JcudvHvFb51VcOw8=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[i8_gsu_gfx11]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_Ml3hokvjiDvKhJoSu7S6QZECSjX1jZwZ8v70vAgw41A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT128x16x32_oPJ0D2_hJFk7QWHePL0M-haYU511AzMLtMCse6mxR34=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MfR5y-UejdyrLhRzzREVsHW0jREDYnYWZbpfcdoaAyws=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_I8II_BH_A_I_UserArgs_MT64x16x32_MjRS5Q2KHLFOlgHSZ7lB2V03oVXNpOp6nvsCayIY8so4=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[icache_flush]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_F8NHS_BH_Bias_A_S_SAB_SAV_Us-FbtZ2OJPyCTTH_uRr2_NzMFdIk4g-BDH-hBF1xp3kY=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_6bvUmfLhajQBNzi5gZQGaLBWAef4vsqIGnnYodYTyb8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_IVVL1k1LGXDN_AQTRyrYM4ytjObTlRvEyKND-YgRhhc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HF8N_HHS_BH_UserArgs_MT16x16x128_Soy89o7mkhUCaaxS3cANm7ARVEwnsi85buRWm7_Hz08=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[lsu_i8]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8_BH_UserArgs_MT32x16x128_MI16x1T1pEelm3p748tPqXwuDNzjgS-Z_zrGbq6Z3VcsBN4aM=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mix_cvt_after_ds_fnuz]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6I0DQPYYXfpQkII_IHPlxnvjd45gaVS0JzS02Hm3p1S4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6KMuoM4g2r45XDVK5u3PI28SXw-o3hB_76QwTOY_H_6U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6MOdnkaLLd3jszHuh5QVpqcs1_n5OEphkC91OdcD1eMo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6NL-UuUOOqavEmpca2H64Rh5IoKu6klK7qTp9J2i-GmU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6YdfA_dfS3Syi08_EjPb0tbolN2WQUB1qu0wdXmxRFvA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6erhKtvmusIQbSHE_LOYZ6Si4YLqk2Md09bGxwkqlihc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6tYj6Y2wMXeYsBs8grsSTn5sOSwC_UmzJFY3GqgzeNHk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_A_S_UserArgs_MT6wSvQ2pRHO6by_2MnRLzkJSWdHgXlJ6yc8pFYL4yZ2Aw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[mxf6_tdm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgG4wLoXVRt9_8V_UyjOVWalD-9Q5SZOUQaunk6K6X0Oc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgHAIXOPJ7jW5CmwvRz9qKCmsmCkiZgjckx1fnwrEnlac=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgKoaB3ZzVm5zgjcL8UhWK1jSMqz1A7yMOs_1gye3GO2Y=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F6SS_MXAE8B32_MXBE8B32_BH_UserArgnBkJiia_j-VrsAAJG6a-trfXnK0zi30IzXDcD_B9P4A=',
      'err': -2,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[segment_interleave_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI16D9rr9ZN-tV90FfkUrCR8cwaJREutyz3IEEjOXhTUGk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1H3iUmsv0tUZkgBxi9eudkup7ecwOgjlxbc1AhPQleWU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1XrxEAb3TLZVfYuvDtDsueza_uggxePtrB7t4UWjAHE8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x128x128_MI1vTI-O09pxYmCJnpVu0djaaC8rwNWisvEEEUvD9Um3aI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1-im7DzXEFH_XsRU9CpBdxdZ29v83xa55kKT3wPjx28o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI13do6WNoEI6x-bOjMzVspHarGdSiDkrAbqgoE8q0xOTs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI19mgIreeGyOpg_XMbDoIo4f9JG9oDJfLPfuCKoC9dwDY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT256x256x128_MI1wLnsQH7mjp6dtZyvF61eNNt9NL1527VoW_AR8iUsaQw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ss_bss]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT16x16x32_MI16ZsV7Fk_QsoFpoqT_m7bhCh_ma7gWq080uh5d-kl9yj4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16BquvKrshxOgDdU89ScvS3-CQkvb1hABSIMjECKd3WVk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16D7dPKqNkQOXjXOJyfhhtEBUbT8i7YMg0j13eoT-qr8g=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16ERy-eLehwSiK15VJ_NluoDCSkhmfRG6t1lrJUW8ooc8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_SS_BSS_B_UserArgs_MT64x64x32_MI16FbbUKQPqhtWZjMkUnRPJIy0VwTLj5I7OWYk6mMpsQWI=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1G03lN_6NcqvWbLYkVP4zmBjsVLA9E-ZeDihPZO8zThs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1bK1AAglcu-hOQEpTafYiYth7xwKlZetV_GXq_vHRETE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1dwgwe9bODmQUS260FhqIlMvGkP_hRvO2Wn4kOWYy5e0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1fOgNMhjlIZqlKk-GK675hdEi8XPdAO9oGXuZUe5Q0Qk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1wI0XoI7BpOIsFcnBNqVOXU6jpVC3njDiiE8Tb1HD0WI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1BOQdp3GPnLdDMtPPtvJrQuMzsZpRVRILzJ6-Eatf1IQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1HAQTa1W7qzbFlI8fqcCx-3P3rAlE_-OMERNyDLFCCsM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x32x64_MI16x1Rk6PC1XgU7yTRR3iB3-rlW7REgcrLYgL-T4ABCo8LNw=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_bf16_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1KKCLiphmtf9I35SJ8BizKu9puPn7OJnPXdYEjj0b9kI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1Qraayl3vbDMEq9HiYQpMVygjmzk3P4OoqyTOleQTWGQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1RiCy9a20uLdBgJLzkfsQ5fj1vfbbHNbRKXGQkXyC8_E=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1TfKDn-0KQZ4q0zbwk5co2LHIFzDngBBqMYDHAqGBxBA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1aXPEnYi7Hyp9cosygbAgiHnPNIAXrBKANZnnr929u60=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT32x32x64_MI16x1jqkpVWjtH59WhjC_8dMvLbjWyqeuuG_0IjN6ZHDIO2c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1J8N2rsvKEOUOpCcCt2IxgPMvz52ry4r8zPYmx4qe_ao=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_UserArgs_MT64x64x64_MI16x1jjGYjeMDUgwk4lpmi4BEPw7Vzt4CwUXDMfpu0gq8v30=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[subtile_mxfp8_bias_sav]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_2AqPQWb6QWPdDqhoGiRq17xK54_xyMw84Cng3CpQXZo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_N0GORpDwHlNxeFeFBjkoUMi2oQfaBlgslXFzdLgbEmg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_W45PgRoCzFInTV7KZleqQomBnGzS5UhfpelfAKvWPQQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S__uIbbI5hk05SdHtGhF247qEBWGsFtezi8lYvOxsgcTk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F8BS_MXAE8B32_MXBE8B32_BH_Bias_S_dN_NRtq0k1GkoxCulfvJb-tS_LkpkbJK3lWXv3250T0=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleA]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTGtnIlhK9-8bcrdohe-F3-EauzWq23WdAx_v0LzT7JF8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STA_BH_Bias_H_SAV_UserArgs_MTU70AHtVUYV6ae-9RBDD9FjdhVvZx6z7hv5UMcMAAc10=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[swizzleB]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTNCaZV0R_FqkCF5YSu_sUGffKwVgfe-QsCRJaECSedj4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HHS_STB_BH_Bias_H_SAV_UserArgs_MTa4hIvWKK-TzFAKoDR4V1KlbxGFwauQVBn8c-Bdn5u2E=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[ulsgro1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12DGbcPbzVyvJP7ACNdboVZZYQq18giQzxU5ZP6eu8gTc=',
      'err': -2,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12LUfDC9FfKh-mFe5VuKkf3USPkeoi2udTT8eIrakEzVM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12icB0u3tf83O8kmGv-SFPvWQtytClo3vwWj-wbACqdLE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12kZDQajVBUNDkke5N8u_f85Zw3c3m7Ysur5CdrC6295M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12qWeIJ_TENg0aMDVBBJDKxBI0-0nNqdD2dFE9Sp2WYoU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_A_S_SAV_UserArgs_MT12uP1k_KHzFvzvQ19eaRTwU-BlYT2xstPmBWNhgeF55ig=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[use_beta_false]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HHS_H_UserArgs_MT64x64x16_MI16x16qCcRb_sT5GcznsviP1qYnbh6tb0oYKYjYInSFoh0gPs=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[xfp32_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAEo5i4Y-upzdR81yX0Kcrdc5ryI8cM8JK_VyGueXRK0o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAidevj6Zew4ToAV1YP-iLXCDF6S33yPGYFmekrE7GNFY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_MX_B_Bias_SB_HA_S_SAB_SAV_UserAwSyRmwzNZx6WYsZKADAFO2EMceILFG0tjOZsgS5q9BA=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xBhyg_5-LVuf9emuiHFlB-JT0jxCEawPzuAbOeyt01eE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xQhohg30NlnV_7DO--R-oaI6mgjkbdLMWRdt9uKhRH2s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xyeGXQIS1bZzC3VgjM1XBP59z1eVndGYGB-cJ7C6AwkI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_C_Z_B_UserArgs_MT16x16x4_MI16x16xys1hahBk7d9AlQqn-5OcZjmc4msMQkZaJECmQFgH20o=',
      'err': 0,
    }),
  ])
# ---
# name: test_setcover_gemm_emits_golden[zgemm_gfx1250]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x32x8_SN_LDSB0_AoOkgc-UY1T0X6ULvdt4n9l2lnEqNQ4730-U0fw5yiNA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT16x8x8_SN_LDSB0_AFTmaKagzDlkl6slFHc0VVnJ1hfGNZQDdPMRNbEM1OW-M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT32x16x8_SN_LDSB0_A1zQRNBbz4Xht1EA_KrV_QLovzktvYidfvWD9sYi1bp8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x16_SN_LDSB0_AFEfVj-BWBnhpGKGA4xy9a2t_g6YBhKwbTk4L2ZPlRQ1A=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT4x8x8_SN_LDSB0_AFCJcg0HusdV8L_GtNuOt6TNZAmDjjEFm8NebvzcF7oYZE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x16x8_SN_LDSB0_AFojel_NA_EfBMjiVywWCGLzb_2WGbmqIh9H1xdMQSUWE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x16_SN_LDSB0_AFRieewFmoFlTUtIsiVb8jzxAzBddGRoA6POdHcjq670s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_Z_B_UserArgs_MT8x4x8_SN_LDSB0_AFCemAghMo3CYJVcwc4L_FG6FJ79hmAFkcanREcP5SjBC0=',
      'err': 0,
    }),
  ])
# ---
